// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clears statuses when a change appears 1`] = `
<div
  aria-live="assertive"
  aria-relevant="additions text"
  id="a11y-status-message"
  role="status"
  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
>
  <div
    style="display: block;"
  >
    goodbye
  </div>
</div>
`;

exports[`does add anything for an empty string 1`] = `
<div
  aria-live="assertive"
  aria-relevant="additions text"
  id="a11y-status-message"
  role="status"
  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
/>
`;

exports[`escapes HTML 1`] = `
<div
  aria-live="assertive"
  aria-relevant="additions text"
  id="a11y-status-message"
  role="status"
  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
>
  <div
    style="display: block;"
  >
    &lt;script&gt;alert("!!!")&lt;/script&gt;
  </div>
</div>
`;

exports[`repeat statuses get appended as children 1`] = `
<div
  aria-live="assertive"
  aria-relevant="additions text"
  id="a11y-status-message"
  role="status"
  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
>
  <div
    style="display: none;"
  >
    hello
  </div>
  <div
    style="display: none;"
  >
    hello
  </div>
  <div
    style="display: block;"
  >
    hello
  </div>
</div>
`;

exports[`sets the status 1`] = `
<div
  aria-live="assertive"
  aria-relevant="additions text"
  id="a11y-status-message"
  role="status"
  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
>
  <div
    style="display: block;"
  >
    hello
  </div>
</div>
`;
